--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.sender {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background: #f8f793;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  min-height: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.root {
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.message {
+  height: 100px;
+}
+.sender-input {
+  background-color: transparent;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 95vw;
+  font-size: 200%;
+  font-family: monospace;
+  padding: 0;
+}
+.sender-input:focus {
+  outline: none;
+}
+.sender-button {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+  cursor: pointer;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  background-color: #6aaff4;
+}
+.fa-paper-plane {
+  font-size: 170%;
+}
+.messages {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.message {
+  align-self: flex-end;
 }
