--- a/src/components/App.css
+++ b/src/components/App.css
@@ -78,7 +78,7 @@
 .message {
   margin: 10px;
 }
-.message-author-user {
+.message-author-me {
   align-self: flex-end;
   text-align: right;
 }
@@ -172,7 +172,12 @@
 .margin-0 {
   margin: 0 !important;
 }
-
+.message__time {
+  color: grey;
+  font-weight: 400;
+  font-size: 12.5px;
+  margin-left: 5px;
+}
 @media screen and (max-width: 1024px) {
   .chatList {
     width: 200px !important;
