--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: rgb(187, 185, 185);
-  height: calc(100vh - 54px);
+  flex-grow: 1;
 }
 .box_flex {
   display: flex;
